Move hero image to .wrapper to make it full width, fix overflow issues

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -47,6 +47,10 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
+}
+
+.page-wrapper {
+  width: 100%;
   overflow: hidden;
 }
 
@@ -206,11 +210,14 @@ p {
 .hero__text {
   width: auto;
   max-width: 45rem;
-  padding: 0 1rem;
+  padding: 0.5rem 1rem;
+  margin: 1rem 0;
+  background-color: rgba(255, 255, 255, 0.5);
 }
-@media (min-width: 64rem) {
+@media (min-width: 48rem) {
   .hero__text {
-    padding: 0;
+    padding: 0.5rem 1rem;
+    margin: 4rem 0;
   }
 }
 .hero__text p {
