--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,5 +7,9 @@ body {
   font-size: 16px;
   margin: 0;
   padding: 0;
+}
+
+.page-wrapper {
+  width: 100%;
   overflow: hidden;
 }
