--- a/src/styles/blocks/_hero.scss
+++ b/src/styles/blocks/_hero.scss
@@ -23,10 +23,13 @@
 .hero__text {
   width: auto;
   max-width: 45rem;
-  padding: 0 1rem;
+  padding: 0.5rem 1rem;
+  margin: 1rem 0;
+  background-color: rgba(255, 255, 255, 0.5);
 
-  @include breakpoint($large) {
-    padding: 0;
+  @include breakpoint($medium) {
+    padding: 0.5rem 1rem;
+    margin: 4rem 0;
   }
 
 
